@@ -2,6 +2,8 @@ Changes in osmar version 1.1-4
 
   o changed suggestion of the "igraph" to "igraph0"
 
+  o changed everything from igraph to "igraph0"
+
 Changes in osmar version 1.1-3
 
   o This is the FOSSGIS 2012 release!
